# VibeTLA

./: .gitignore  .mise.toml  README.md  install.sh  pyproject.toml  pyrightconfig.json
.opencode/skills/feature-spec-planner/: SKILL.md
.opencode/skills/feature-spec-planner/references/: modeling-guide.md  workflow.md
codex/skill/feature-spec-planner/agents/: openai.yaml
codex/skill/feature-spec-planner/references/: output-format.md
docs/: architecture.md  examples.md  usage.md
planning/tasks/: README.md  example-session-refresh.md
scripts/: bootstrap_project.sh  doctor.py  install_codex_skill.sh  install_opencode_skill.sh
specs/: README.md
specs/example-session-refresh/: bundle.json  impl.md  model.cfg  plan.md  spec.tla  tests.md
specs/smoke-session-refresh/: bundle.json  impl.md  model.cfg  plan.md  spec.tla  tests.md
tools/: __init__.py
tools/feature_spec/: __init__.py  bundle.py  cli.py  normalize.py  parser.py  planner.py  tla_runner.py  writer.py
tools/feature_spec/schemas/: feature_spec.schema.json
tools/feature_spec/templates/: impl.md.j2  model.cfg.j2  plan.md.j2  spec.tla.j2  tests.md.j2
