[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "feature-spec-planner"
version = "0.1.0"
description = "Spec-first planning toolkit for feature development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
feature-spec = "feature_spec.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tools/feature_spec"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/docs",
  "/planning",
  "/scripts",
  "/specs",
  "/tools/feature_spec",
  "/.opencode",
  "/codex",
  "/.mise.toml",
  "/.python-version",
]

[tool.uv]
package = true
